--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-aubio==0.4.9
-clams-python==0.5.3
-ffmpeg==1.4
-ffmpeg-python==0.2.0
-Flask==2.2.3
-Flask-RESTful==0.3.9
-future==0.18.3
-gunicorn==20.1.0
+aubio>=0.4.9
+clams-python>=0.5.3
+ffmpeg>=1.4
+ffmpeg-python>=0.2.0
+Flask>=2.2.3
+Flask-RESTful>=0.3.9
+future>=0.18.3
+gunicorn>=20.1.0
 idna
-ipykernel==6.21.2
-ipython==8.10.0
-jsonschema==4.17.3
-lapps==0.0.2
-lxml==4.9.1
-mmif-python==0.4.8
-numpy==1.24.2
+ipykernel>=6.21.2
+ipython>=8.10.0
+jsonschema>=4.17.3
+lapps>=0.0.2
+lxml>=4.9.1
+mmif-python>=0.4.8
+numpy>=1.24.2
